Changes to bench_neo4j.sh and rates-bench.sh