@@ -10,15 +10,16 @@ TOTAL_MEM=249856
 TOTAL_MEM=15043 # c4.2x, 15GB
 AVAIL_MEM=$(( $TOTAL_MEM - 512 )) # reserve 512m for OS
 
+minDeg="-minDeg30"
+minDeg=""
+
 DATASET=higgs-twitter-40attr16each
-
 DATASET=higgs-twitter-20attr35each
+DATASET=liveJournal-40attr16each${minDeg}
 
-DATASET=liveJournal-40attr16each
-
-if [[ "$DATASET" == "liveJournal-40attr16each" ]]; then
+if [[ "$DATASET" == "liveJournal-40attr16each"* ]]; then
   pushd ${QUERY_DIR} >/dev/null
-  yes | cp -rf liveJournal-40attr16each-queries/*txt ./
+  yes | cp -rf liveJournal-40attr16each${minDeg}-queries/*txt ./
   popd >/dev/null
 elif [[ "$DATASET" == "higgs-twitter-20attr35each" ]]; then
   pushd ${QUERY_DIR} >/dev/null
@@ -28,6 +29,7 @@ else
   echo implement query copying for me!
   exit 1
 fi
+NEO4J_DIR=/mnt2T/data/neo4j
 
 #benchNeighbor=T
 #benchNeighborAtype=T
@@ -37,34 +39,33 @@ fi
 #benchNeighborNodeIndexed=T
 #benchMixed=T
 
-thputThreads=8
+thputThreads=1
 #benchNhbrThput=T
 
-#benchAssocRange=T
-#benchObjGet=T
-#benchAssocGet=T
-#benchAssocCount=T
+benchAssocRange=T
+benchObjGet=T
+benchAssocGet=T
+benchAssocCount=T
 benchAssocTimeRange=T
 
 pageCacheForNodes=8543m # works, has tradeoff
-pageCacheIgnoreIndexes=12g
+pageCacheForNodes=""
+pageCacheIgnoreIndexes=72g
 
-for pageCacheForNodes in 9574m 9370m; do
-for JVM_HEAP in 2048; do
+#for pageCacheForNodes in 9574m 9370m; do
+for JVM_HEAP in 6900; do
   # "use more": #`echo "0.75 * ($TOTAL_MEM - $JVM_HEAP)" | bc | awk '{printf("%d", $1)}'` #`echo "$AVAIL_MEM - $JVM_HEAP" | bc | awk '{printf("%d", $1)}'`
   # For default neo4j setting, use "Auto"; otherwise support custom value with postfix k/m/g
   PC=$pageCacheForNodes
     echo "Setting -Xmx to ${JVM_HEAP}m"
-    echo "Setting neo4j pagecache to ${PC}m"
 
     for num_nodes in ${nodes[@]}
     do
-        echo "Benching nodes: ${num_nodes}"
 
     if [[ -n "$benchNodeNode" ]]; then
         sleep 2 && sync && sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
-        find data/neo4j/${DATASET}/schema/index -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
-        find data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
+        find /mnt2T/data/neo4j/${DATASET}/schema/index -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
+        find /mnt2T/data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
         java -verbose:gc -server -XX:+UseConcMarkSweepGC -Xmx${JVM_HEAP}m -cp ${classpath} \
            edu.berkeley.cs.succinctgraph.neo4jbench.BenchNode node-node-latency \
            ${NEO4J_DIR}/${DATASET} \
@@ -78,8 +79,8 @@ for JVM_HEAP in 2048; do
 
     if [[ -n "$benchNode" ]]; then
         sleep 2 && sync && sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
-        find data/neo4j/${DATASET}/schema/index -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
-        find data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
+        find /mnt2T/data/neo4j/${DATASET}/schema/index -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
+        find /mnt2T/data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
 
         java -verbose:gc -server -XX:+UseConcMarkSweepGC -Xmx${JVM_HEAP}m -cp ${classpath} \
            edu.berkeley.cs.succinctgraph.neo4jbench.BenchNode node-latency \
@@ -94,7 +95,7 @@ for JVM_HEAP in 2048; do
 
     if [[ -n "$benchNeighborNode" ]]; then
         sleep 2 && sync && sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
-        find data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
+        find /mnt2T/data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
         java -verbose:gc -server -XX:+UseConcMarkSweepGC -Xmx${JVM_HEAP}m -cp ${classpath} \
             edu.berkeley.cs.succinctgraph.neo4jbench.NeighborNodeBench latency \
             ${NEO4J_DIR}/${DATASET} \
@@ -108,7 +109,7 @@ for JVM_HEAP in 2048; do
 
     if [[ -n "$benchNeighbor" ]]; then
         sleep 2 && sync && sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
-        find data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
+        find /mnt2T/data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
         java -verbose:gc -server -XX:+UseConcMarkSweepGC -Xmx${JVM_HEAP}m -cp ${classpath} \
            edu.berkeley.cs.succinctgraph.neo4jbench.BenchNeighbor neighbor-latency \
            ${NEO4J_DIR}/${DATASET} \
@@ -122,7 +123,7 @@ for JVM_HEAP in 2048; do
 
     if [[ -n "$benchNeighborAtype" ]]; then
         sleep 2 && sync && sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
-        find data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
+        find /mnt2T/data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
         java -verbose:gc -server -XX:+UseConcMarkSweepGC -Xmx${JVM_HEAP}m -cp ${classpath} \
             edu.berkeley.cs.succinctgraph.neo4jbench.BenchNeighborAtype \
             latency \
@@ -137,7 +138,7 @@ for JVM_HEAP in 2048; do
 
       if [[ -n "$benchNeighborNodeIndexed" ]]; then
         sleep 2 && sync && sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
-        find data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
+        find /mnt2T/data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
         java -verbose:gc -server -XX:+UseConcMarkSweepGC -Xmx${JVM_HEAP}m -cp ${classpath} \
             edu.berkeley.cs.succinctgraph.neo4jbench.NeighborNodeBench latency-index \
             ${NEO4J_DIR}/${DATASET} \
@@ -151,8 +152,8 @@ for JVM_HEAP in 2048; do
 
       if [[ -n "$benchMixed" ]]; then
         sleep 2 && sync && sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
-        find data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
-        find data/neo4j/${DATASET}/schema/index -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
+        find /mnt2T/data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
+        find /mnt2T/data/neo4j/${DATASET}/schema/index -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
 
         java -verbose:gc -server -XX:+UseConcMarkSweepGC -Xmx${JVM_HEAP}m -cp ${classpath} \
            edu.berkeley.cs.succinctgraph.neo4jbench.MixBench latency \
@@ -176,10 +177,10 @@ for JVM_HEAP in 2048; do
 
       fi
 
+      for thputThreads in 30; do
       if [[ -n "$benchNhbrThput" ]]; then
         sleep 2 && sync && sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
-        find data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
-        find data/neo4j/${DATASET}/schema/index -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
+        find /mnt2T/data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
 
         java -verbose:gc -server -XX:+UseConcMarkSweepGC -Xmx${JVM_HEAP}m -cp ${classpath} \
            edu.berkeley.cs.succinctgraph.neo4jbench.BenchNeighbor \
@@ -198,78 +199,91 @@ for JVM_HEAP in 2048; do
         echo ${thputThreads} clients, $x get_nhbr queries/sec
 
       fi
+    done
 
     if [[ -n "$benchAssocRange" ]]; then
-        sleep 2 && sync && sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
-        find data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
+        # sleep 2 && sync && sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
+        find /mnt2T/data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
+        cmd="java -verbose:gc -server -XX:+UseConcMarkSweepGC -Xmx${JVM_HEAP}m -cp ${classpath} \
+           edu.berkeley.cs.succinctgraph.neo4jbench.tao.BenchTAOAssocRange \
+           latency \
+           ${NEO4J_DIR}/${DATASET} \
+           ${QUERY_DIR}/assocRange_warmup.txt \
+           ${QUERY_DIR}/assocRange_query.txt \
+           ${HOME_DIR}/neo4j_${DATASET}_assocRange_latency_jvm${JVM_HEAP}m_pagecache${pageCacheIgnoreIndexes}.txt \
+           ${warmup_assocRange} \
+           ${measure_assocRange} \
+           ${pageCacheIgnoreIndexes}"
+        echo $cmd
         java -verbose:gc -server -XX:+UseConcMarkSweepGC -Xmx${JVM_HEAP}m -cp ${classpath} \
            edu.berkeley.cs.succinctgraph.neo4jbench.tao.BenchTAOAssocRange \
            latency \
            ${NEO4J_DIR}/${DATASET} \
            ${QUERY_DIR}/assocRange_warmup.txt \
            ${QUERY_DIR}/assocRange_query.txt \
-           ${HOME_DIR}/neo4j_${DATASET}_assocRange_latency_jvm${JVM_HEAP}m_pagecache${PC}.txt \
+           ${HOME_DIR}/neo4j_${DATASET}_assocRange_latency_jvm${JVM_HEAP}m_pagecache${pageCacheIgnoreIndexes}.txt \
            ${warmup_assocRange} \
            ${measure_assocRange} \
            ${pageCacheIgnoreIndexes}
+
       fi
 
     if [[ -n "$benchObjGet" ]]; then
-        sleep 2 && sync && sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
-        find data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
+        #sleep 2 && sync && sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
+        find /mnt2T/data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
         java -verbose:gc -server -XX:+UseConcMarkSweepGC -Xmx${JVM_HEAP}m -cp ${classpath} \
            edu.berkeley.cs.succinctgraph.neo4jbench.tao.BenchTAOObjGet \
            latency \
            ${NEO4J_DIR}/${DATASET} \
            ${QUERY_DIR}/objGet_warmup.txt \
            ${QUERY_DIR}/objGet_query.txt \
-           ${HOME_DIR}/neo4j_${DATASET}_objGet_latency_jvm${JVM_HEAP}m_pagecache${PC}.txt \
+           ${HOME_DIR}/neo4j_${DATASET}_objGet_latency_jvm${JVM_HEAP}m_pagecache${pageCacheIgnoreIndexes}.txt \
            ${warmup_objGet} \
            ${measure_objGet} \
            ${pageCacheIgnoreIndexes}
       fi
 
     if [[ -n "$benchAssocGet" ]]; then
-        sleep 2 && sync && sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
-        find data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
+        #sleep 2 && sync && sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
+        find /mnt2T/data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
         java -verbose:gc -server -XX:+UseConcMarkSweepGC -Xmx${JVM_HEAP}m -cp ${classpath} \
            edu.berkeley.cs.succinctgraph.neo4jbench.tao.BenchTAOAssocGet \
            latency \
            ${NEO4J_DIR}/${DATASET} \
            ${QUERY_DIR}/assocGet_warmup.txt \
            ${QUERY_DIR}/assocGet_query.txt \
-           ${HOME_DIR}/neo4j_${DATASET}_assocGet_latency_jvm${JVM_HEAP}m_pagecache${PC}.txt \
+           ${HOME_DIR}/neo4j_${DATASET}_assocGet_latency_jvm${JVM_HEAP}m_pagecache${pageCacheIgnoreIndexes}.txt \
            ${warmup_assocGet} \
            ${measure_assocGet} \
            ${pageCacheIgnoreIndexes}
       fi
 
       if [[ -n "$benchAssocCount" ]]; then
-        sleep 2 && sync && sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
+        #sleep 2 && sync && sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
 
-        find data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
+        find /mnt2T/data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
         java -verbose:gc -server -XX:+UseConcMarkSweepGC -Xmx${JVM_HEAP}m -cp ${classpath} \
            edu.berkeley.cs.succinctgraph.neo4jbench.tao.BenchTAOAssocCount \
            latency \
            ${NEO4J_DIR}/${DATASET} \
            ${QUERY_DIR}/assocCount_warmup.txt \
            ${QUERY_DIR}/assocCount_query.txt \
-           ${HOME_DIR}/neo4j_${DATASET}_assocCount_latency_jvm${JVM_HEAP}m_pagecache${PC}.txt \
+           ${HOME_DIR}/neo4j_${DATASET}_assocCount_latency_jvm${JVM_HEAP}m_pagecache${pageCacheIgnoreIndexes}.txt \
            ${warmup_assocCount} \
            ${measure_assocCount} \
            ${pageCacheIgnoreIndexes}
       fi
 
     if [[ -n "$benchAssocTimeRange" ]]; then
-        sleep 2 && sync && sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
-        find data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
+        #sleep 2 && sync && sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
+        find /mnt2T/data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
         java -verbose:gc -server -XX:+UseConcMarkSweepGC -Xmx${JVM_HEAP}m -cp ${classpath} \
            edu.berkeley.cs.succinctgraph.neo4jbench.tao.BenchTAOAssocTimeRange \
            latency \
            ${NEO4J_DIR}/${DATASET} \
            ${QUERY_DIR}/assocTimeRange_warmup.txt \
            ${QUERY_DIR}/assocTimeRange_query.txt \
-           ${HOME_DIR}/neo4j_${DATASET}_assocTimeRange_latency_jvm${JVM_HEAP}m_pagecache${PC}.txt \
+           ${HOME_DIR}/neo4j_${DATASET}_assocTimeRange_latency_jvm${JVM_HEAP}m_pagecache${pageCacheIgnoreIndexes}.txt \
            ${warmup_assocTimeRange} \
            ${measure_assocTimeRange} \
            ${pageCacheIgnoreIndexes}
@@ -277,4 +291,3 @@ for JVM_HEAP in 2048; do
 
     done
   done
-done
